# wordle

./: README.md  wordle.cabal
app/: Main.hs
data/: output  output-hard
